--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+  scroll-behavior: smooth;
+}
 ::-webkit-scrollbar {
   width: 0;
 }
@@ -5,6 +8,7 @@
 @font-face {
   font-family: HarryPotterFont;
   src: url("./assets/HarryPotter-ov4z.ttf");
+  font-display: swap;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap");
@@ -16,7 +20,7 @@
   font-weight: 400;
   font-style: normal;
   color: #856538;
-  font-size: 4em;
+  font-size: 1.5rem;
 }
 
 #category-title {
@@ -35,7 +39,11 @@
 }
 
 #details {
-  /* font-family: "Crimson Text"; */
+  color: #ffffff;
+  font-family: "Crimson Text";
+}
+span {
+  color: #ffffff;
 }
 
 @media screen and (max-width: 480px) {
@@ -45,4 +53,27 @@
   #category-title {
     font-size: 1em;
   }
+}
+.hogwarts {
+  width: 100%;
+  height: 100%;
+
+  background: #000000;
+  --gap: 5em;
+  --line: 1px;
+  --color: rgba(255, 255, 255, 0.2);
+
+  background-image: linear-gradient(
+      -90deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    ),
+    linear-gradient(
+      0deg,
+      transparent calc(var(--gap) - var(--line)),
+      var(--color) calc(var(--gap) - var(--line) + 1px),
+      var(--color) var(--gap)
+    );
+  background-size: var(--gap) var(--gap);
 }
