--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,10 @@ span {
 }
 .hogwarts {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 
   background: #000000;
-  --gap: 5em;
+  /* --gap: 0em;
   --line: 1px;
   --color: rgba(255, 255, 255, 0.2);
 
@@ -75,5 +75,5 @@ span {
       var(--color) calc(var(--gap) - var(--line) + 1px),
       var(--color) var(--gap)
     );
-  background-size: var(--gap) var(--gap);
+  background-size: var(--gap) var(--gap); */
 }
