--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 html {
+  background-color: #150e4f;
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
@@ -11,10 +12,7 @@ html {
   font-display: swap;
 }
 
-#main-heading {
+#nav-brand-logo {
   font-family: HarryPotterFont;
-  font-weight: 400;
-  font-style: normal;
-  color: #856538;
-  font-size: 1.5rem;
+  color: #fec012;
 }
