--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 html {
-  /* background-color: #150e4f; */
   scroll-behavior: smooth;
 }
 ::-webkit-scrollbar {
@@ -16,4 +15,35 @@ html {
   letter-spacing: 2.5px;
   font-family: HarryPotterFont;
   color: #fec012;
+}
+
+/* Card */
+.card__grid {
+  display: grid;
+  grid-template-columns: 1fr 3.75em 1fr;
+  grid-template-rows: 9.375em 12.5em 3.125em 9.375em;
+}
+
+.card--1 {
+  grid-row: 1/3;
+  justify-self: end;
+  align-self: start;
+}
+.card--2 {
+  grid-row: 1/2;
+  grid-column: 3/3;
+  justify-self: start;
+  align-self: start;
+}
+.card--3 {
+  grid-row: 2/5;
+  grid-column: 3/3;
+  justify-self: start;
+  align-self: end;
+}
+.card--4 {
+  grid-row: 4/5;
+  grid-column: 1/2;
+  justify-self: end;
+  align-self: end;
 }
